add excel gen
